// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Handoff surfaces — help > renders in narrow width > handoff-help-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda handoff[0m

• estacoda handoff telegram  Generate a handoff code for Telegram
• estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — help > renders in no Unicode > handoff-help-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda handoff[0m

- estacoda handoff telegram  Generate a handoff code for Telegram
- estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — help > renders in no color > handoff-help-no color 1`] = `
"[OK] EstaCoda handoff

• estacoda handoff telegram  Generate a handoff code for Telegram
• estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — help > renders in plain > handoff-help-plain 1`] = `
"[OK] EstaCoda handoff

- estacoda handoff telegram  Generate a handoff code for Telegram
- estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — help > renders in standard dark > handoff-help-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda handoff[0m

• estacoda handoff telegram  Generate a handoff code for Telegram
• estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — help > renders in standard light > handoff-help-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mEstaCoda handoff[0m

• estacoda handoff telegram  Generate a handoff code for Telegram
• estacoda handoff list      List active handoff codes"
`;

exports[`Handoff surfaces — list > renders in narrow width > handoff-list-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mActive handoff codes: 2[0m

• ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
• DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list > renders in no Unicode > handoff-list-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mActive handoff codes: 2[0m

- ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
- DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list > renders in no color > handoff-list-no color 1`] = `
"[OK] Active handoff codes: 2

• ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
• DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list > renders in plain > handoff-list-plain 1`] = `
"[OK] Active handoff codes: 2

- ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
- DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list > renders in standard dark > handoff-list-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mActive handoff codes: 2[0m

• ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
• DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list > renders in standard light > handoff-list-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mActive handoff codes: 2[0m

• ABC123 → sess-1 (expires 2024-01-01T00:10:00Z)
• DEF456 → sess-2 (expires 2024-01-01T00:10:00Z)"
`;

exports[`Handoff surfaces — list empty > renders in narrow width > handoff-list-empty-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff codes[0m

No active handoff codes."
`;

exports[`Handoff surfaces — list empty > renders in no Unicode > handoff-list-empty-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff codes[0m

No active handoff codes."
`;

exports[`Handoff surfaces — list empty > renders in no color > handoff-list-empty-no color 1`] = `
"[OK] Handoff codes

No active handoff codes."
`;

exports[`Handoff surfaces — list empty > renders in plain > handoff-list-empty-plain 1`] = `
"[OK] Handoff codes

No active handoff codes."
`;

exports[`Handoff surfaces — list empty > renders in standard dark > handoff-list-empty-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff codes[0m

No active handoff codes."
`;

exports[`Handoff surfaces — list empty > renders in standard light > handoff-list-empty-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mHandoff codes[0m

No active handoff codes."
`;

exports[`Handoff surfaces — no active session > renders in narrow width > handoff-no-session-narrow width 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — no active session > renders in no Unicode > handoff-no-session-no Unicode 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — no active session > renders in no color > handoff-no-session-no color 1`] = `
"[FAIL] No active session

[WARN] No session: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — no active session > renders in plain > handoff-no-session-plain 1`] = `
"[FAIL] No active session

[WARN] No session: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — no active session > renders in standard dark > handoff-no-session-standard dark 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — no active session > renders in standard light > handoff-no-session-standard light 1`] = `
"[38;2;198;40;40m[FAIL][0m [1mNo active session[0m

[38;2;239;108;0m[WARN][0m [1mNo session[0m: No active session. Start an interactive session first, then run: estacoda handoff telegram"
`;

exports[`Handoff surfaces — telegram > renders in narrow width > handoff-telegram-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff code generated[0m

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Handoff surfaces — telegram > renders in no Unicode > handoff-telegram-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff code generated[0m

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Handoff surfaces — telegram > renders in no color > handoff-telegram-no color 1`] = `
"[OK] Handoff code generated

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Handoff surfaces — telegram > renders in plain > handoff-telegram-plain 1`] = `
"[OK] Handoff code generated

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Handoff surfaces — telegram > renders in standard dark > handoff-telegram-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mHandoff code generated[0m

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Handoff surfaces — telegram > renders in standard light > handoff-telegram-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mHandoff code generated[0m

Handoff code for Telegram: ABC123
Session: sess-1
Expires: 2024-01-01T00:10:00Z


To attach a Telegram chat to this session, send the following in Telegram:
  /attach ABC123

This code is single-use and expires in 10 minutes."
`;

exports[`Session surfaces — Arabic picker > renders mixed Arabic and technical text in plain mode > sessions-picker-arabic-plain 1`] = `
"⁧اختر جلسة⁩
   ⁦#⁩  ⁧الجلسة⁩
   -  -------------------
>  ⁦1⁩  ⁧مراجعة نشر Telegram⁩
      ⁧بدأت 2026-08-04 08:15 UTC  |  آخر نشاط 2026-08-04 09:45 UTC  |  عبر Telegram⁩

⁧Up/Down للتنقل  |  ENTER للفتح  |  CTRL+C للخروج⁩"
`;

exports[`Session surfaces — Arabic picker > renders mixed Arabic and technical text with theme tokens > sessions-picker-arabic-standard 1`] = `
"[38;2;67;137;215m[1m⁧اختر جلسة⁩[0m[0m
   [38;2;176;176;176m⁦#⁩[0m  [38;2;176;176;176m⁧الجلسة⁩             [0m
   [38;2;237;237;237m─  ───────────────────[0m
[38;2;64;224;208m❯[0m  [38;2;64;224;208m⁦1⁩[0m  [38;2;64;224;208m⁧مراجعة نشر Telegram⁩[0m
      [38;2;112;112;112m⁧بدأت 2026-08-04 08:15 UTC · آخر نشاط 2026-08-04 09:45 UTC · عبر Telegram⁩[0m

[38;2;112;112;112m⁧↑↓ للتنقل · ENTER للفتح · CTRL+C للخروج⁩[0m"
`;

exports[`Session surfaces — attach > renders in narrow width > session-attach-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface attached[0m

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — attach > renders in no Unicode > session-attach-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface attached[0m

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — attach > renders in no color > session-attach-no color 1`] = `
"[OK] Surface attached

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — attach > renders in plain > session-attach-plain 1`] = `
"[OK] Surface attached

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — attach > renders in standard dark > session-attach-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface attached[0m

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — attach > renders in standard light > session-attach-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSurface attached[0m

Attached telegram:chat-1 to session sess-1."
`;

exports[`Session surfaces — current > renders in narrow width > session-current-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current > renders in no Unicode > session-current-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
-   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current > renders in no color > session-current-no color 1`] = `
"[OK] Current session

Current session: runtime-sess-1

Surface pointers
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current > renders in plain > session-current-plain 1`] = `
"[OK] Current session

Current session: runtime-sess-1

Surface pointers
-   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current > renders in standard dark > session-current-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current > renders in standard light > session-current-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — current no pointers > renders in narrow width > session-current-no-pointers-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — current no pointers > renders in no Unicode > session-current-no-pointers-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
-   none"
`;

exports[`Session surfaces — current no pointers > renders in no color > session-current-no-pointers-no color 1`] = `
"[OK] Current session

Current session: runtime-sess-1

Surface pointers
•   none"
`;

exports[`Session surfaces — current no pointers > renders in plain > session-current-no-pointers-plain 1`] = `
"[OK] Current session

Current session: runtime-sess-1

Surface pointers
-   none"
`;

exports[`Session surfaces — current no pointers > renders in standard dark > session-current-no-pointers-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — current no pointers > renders in standard light > session-current-no-pointers-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mCurrent session[0m

Current session: runtime-sess-1

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — detach > renders in narrow width > session-detach-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface detached[0m

Detached telegram:chat-1."
`;

exports[`Session surfaces — detach > renders in no Unicode > session-detach-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface detached[0m

Detached telegram:chat-1."
`;

exports[`Session surfaces — detach > renders in no color > session-detach-no color 1`] = `
"[OK] Surface detached

Detached telegram:chat-1."
`;

exports[`Session surfaces — detach > renders in plain > session-detach-plain 1`] = `
"[OK] Surface detached

Detached telegram:chat-1."
`;

exports[`Session surfaces — detach > renders in standard dark > session-detach-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSurface detached[0m

Detached telegram:chat-1."
`;

exports[`Session surfaces — detach > renders in standard light > session-detach-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSurface detached[0m

Detached telegram:chat-1."
`;

exports[`Session surfaces — help > renders in narrow width > sessions-help-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda sessions[0m

• estacoda sessions                           Choose and resume a recent session
• estacoda sessions list                      List recent sessions
• estacoda sessions recall <query>            Summarize historical session matches
• estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
• estacoda sessions show <session-id>         Show session details
• estacoda sessions current                   Show current session
• estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
• estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — help > renders in no Unicode > sessions-help-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda sessions[0m

- estacoda sessions                           Choose and resume a recent session
- estacoda sessions list                      List recent sessions
- estacoda sessions recall <query>            Summarize historical session matches
- estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
- estacoda sessions show <session-id>         Show session details
- estacoda sessions current                   Show current session
- estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
- estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — help > renders in no color > sessions-help-no color 1`] = `
"[OK] EstaCoda sessions

• estacoda sessions                           Choose and resume a recent session
• estacoda sessions list                      List recent sessions
• estacoda sessions recall <query>            Summarize historical session matches
• estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
• estacoda sessions show <session-id>         Show session details
• estacoda sessions current                   Show current session
• estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
• estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — help > renders in plain > sessions-help-plain 1`] = `
"[OK] EstaCoda sessions

- estacoda sessions                           Choose and resume a recent session
- estacoda sessions list                      List recent sessions
- estacoda sessions recall <query>            Summarize historical session matches
- estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
- estacoda sessions show <session-id>         Show session details
- estacoda sessions current                   Show current session
- estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
- estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — help > renders in standard dark > sessions-help-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mEstaCoda sessions[0m

• estacoda sessions                           Choose and resume a recent session
• estacoda sessions list                      List recent sessions
• estacoda sessions recall <query>            Summarize historical session matches
• estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
• estacoda sessions show <session-id>         Show session details
• estacoda sessions current                   Show current session
• estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
• estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — help > renders in standard light > sessions-help-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mEstaCoda sessions[0m

• estacoda sessions                           Choose and resume a recent session
• estacoda sessions list                      List recent sessions
• estacoda sessions recall <query>            Summarize historical session matches
• estacoda sessions compact <session-id> [--topic <topic>]  Compact a session manually
• estacoda sessions show <session-id>         Show session details
• estacoda sessions current                   Show current session
• estacoda sessions attach <surface> <id> <session-id>  Attach surface to session
• estacoda sessions detach <surface> <id>     Detach surface from session"
`;

exports[`Session surfaces — invalid surface > renders in narrow width > session-invalid-surface-narrow width 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mInvalid surface[0m

[38;2;239;83;80m[ERROR][0m [1mInvalid surface[0m: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — invalid surface > renders in no Unicode > session-invalid-surface-no Unicode 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mInvalid surface[0m

[38;2;239;83;80m[ERROR][0m [1mInvalid surface[0m: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — invalid surface > renders in no color > session-invalid-surface-no color 1`] = `
"[FAIL] Invalid surface

[ERROR] Invalid surface: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — invalid surface > renders in plain > session-invalid-surface-plain 1`] = `
"[FAIL] Invalid surface

[ERROR] Invalid surface: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — invalid surface > renders in standard dark > session-invalid-surface-standard dark 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mInvalid surface[0m

[38;2;239;83;80m[ERROR][0m [1mInvalid surface[0m: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — invalid surface > renders in standard light > session-invalid-surface-standard light 1`] = `
"[38;2;198;40;40m[FAIL][0m [1mInvalid surface[0m

[38;2;198;40;40m[ERROR][0m [1mInvalid surface[0m: Invalid surface: invalid. Valid: cli, telegram, discord"
`;

exports[`Session surfaces — list > renders in narrow width > sessions-list-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSessions: 2[0m

• sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
• sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — list > renders in no Unicode > sessions-list-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSessions: 2[0m

- sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
- sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — list > renders in no color > sessions-list-no color 1`] = `
"[OK] Sessions: 2

• sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
• sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — list > renders in plain > sessions-list-plain 1`] = `
"[OK] Sessions: 2

- sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
- sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — list > renders in standard dark > sessions-list-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSessions: 2[0m

• sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
• sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — list > renders in standard light > sessions-list-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSessions: 2[0m

• sess-1 — Test Session — updated 2024-01-02T00:00:00Z [telegram:chat-1]
• sess-2 — (no title) — no activity"
`;

exports[`Session surfaces — no active session > renders in narrow width > session-no-active-narrow width 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session in this shell."
`;

exports[`Session surfaces — no active session > renders in no Unicode > session-no-active-no Unicode 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session in this shell."
`;

exports[`Session surfaces — no active session > renders in no color > session-no-active-no color 1`] = `
"[FAIL] No active session

[WARN] No session: No active session in this shell."
`;

exports[`Session surfaces — no active session > renders in plain > session-no-active-plain 1`] = `
"[FAIL] No active session

[WARN] No session: No active session in this shell."
`;

exports[`Session surfaces — no active session > renders in standard dark > session-no-active-standard dark 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mNo active session[0m

[38;2;255;167;38m[WARN][0m [1mNo session[0m: No active session in this shell."
`;

exports[`Session surfaces — no active session > renders in standard light > session-no-active-standard light 1`] = `
"[38;2;198;40;40m[FAIL][0m [1mNo active session[0m

[38;2;239;108;0m[WARN][0m [1mNo session[0m: No active session in this shell."
`;

exports[`Session surfaces — not found > renders in narrow width > session-not-found-narrow width 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mSession not found[0m

[38;2;239;83;80m[ERROR][0m [1mNot found[0m: Session not found: missing"
`;

exports[`Session surfaces — not found > renders in no Unicode > session-not-found-no Unicode 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mSession not found[0m

[38;2;239;83;80m[ERROR][0m [1mNot found[0m: Session not found: missing"
`;

exports[`Session surfaces — not found > renders in no color > session-not-found-no color 1`] = `
"[FAIL] Session not found

[ERROR] Not found: Session not found: missing"
`;

exports[`Session surfaces — not found > renders in plain > session-not-found-plain 1`] = `
"[FAIL] Session not found

[ERROR] Not found: Session not found: missing"
`;

exports[`Session surfaces — not found > renders in standard dark > session-not-found-standard dark 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mSession not found[0m

[38;2;239;83;80m[ERROR][0m [1mNot found[0m: Session not found: missing"
`;

exports[`Session surfaces — not found > renders in standard light > session-not-found-standard light 1`] = `
"[38;2;198;40;40m[FAIL][0m [1mSession not found[0m

[38;2;198;40;40m[ERROR][0m [1mNot found[0m: Session not found: missing"
`;

exports[`Session surfaces — picker > renders in narrow width > sessions-picker-narrow width 1`] = `
"[38;2;67;137;215m[1mChoose a session[0m[0m
   [38;2;176;176;176m#[0m  [38;2;176;176;176mSession                   [0m
   [38;2;237;237;237m─  ──────────────────────────[0m
[38;2;64;224;208m❯[0m  [38;2;64;224;208m1[0m  [38;2;64;224;208mImplement session picker  [0m
      [38;2;112;112;112mStarted 2026-08-04 08:15 UTC ·[0m
      [38;2;112;112;112mLast active 2026-08-04 09:45 UTC ·[0m
      [38;2;112;112;112mVia CLI[0m
   [38;2;112;112;112m2[0m  [38;2;232;232;232mTelegram deployment review[0m

[38;2;112;112;112m↑↓ navigate · ENTER open · CTRL+C exit[0m"
`;

exports[`Session surfaces — picker > renders in no Unicode > sessions-picker-no Unicode 1`] = `
"[38;2;67;137;215m[1mChoose a session[0m[0m
   [38;2;176;176;176m#[0m  [38;2;176;176;176mSession                   [0m
   [38;2;237;237;237m-  --------------------------[0m
[38;2;64;224;208m>[0m  [38;2;64;224;208m1[0m  [38;2;64;224;208mImplement session picker  [0m
      [38;2;112;112;112mStarted 2026-08-04 08:15 UTC | Last active 2026-08-04 09:45 UTC | Via CLI[0m
   [38;2;112;112;112m2[0m  [38;2;232;232;232mTelegram deployment review[0m

[38;2;112;112;112mUp/Down navigate | ENTER open | CTRL+C exit[0m"
`;

exports[`Session surfaces — picker > renders in no color > sessions-picker-no color 1`] = `
"Choose a session
   #  Session
   ─  ──────────────────────────
❯  1  Implement session picker
      Started 2026-08-04 08:15 UTC · Last active 2026-08-04 09:45 UTC · Via CLI
   2  Telegram deployment review

↑↓ navigate · ENTER open · CTRL+C exit"
`;

exports[`Session surfaces — picker > renders in plain > sessions-picker-plain 1`] = `
"Choose a session
   #  Session
   -  --------------------------
>  1  Implement session picker
      Started 2026-08-04 08:15 UTC  |  Last active 2026-08-04 09:45 UTC  |  Via CLI
   2  Telegram deployment review

Up/Down navigate  |  ENTER open  |  CTRL+C exit"
`;

exports[`Session surfaces — picker > renders in standard dark > sessions-picker-standard dark 1`] = `
"[38;2;67;137;215m[1mChoose a session[0m[0m
   [38;2;176;176;176m#[0m  [38;2;176;176;176mSession                   [0m
   [38;2;237;237;237m─  ──────────────────────────[0m
[38;2;64;224;208m❯[0m  [38;2;64;224;208m1[0m  [38;2;64;224;208mImplement session picker  [0m
      [38;2;112;112;112mStarted 2026-08-04 08:15 UTC · Last active 2026-08-04 09:45 UTC · Via CLI[0m
   [38;2;112;112;112m2[0m  [38;2;232;232;232mTelegram deployment review[0m

[38;2;112;112;112m↑↓ navigate · ENTER open · CTRL+C exit[0m"
`;

exports[`Session surfaces — picker > renders in standard light > sessions-picker-standard light 1`] = `
"[38;2;67;137;215m[1mChoose a session[0m[0m
   [38;2;74;74;74m#[0m  [38;2;74;74;74mSession                   [0m
   [38;2;224;224;224m─  ──────────────────────────[0m
[38;2;0;140;149m❯[0m  [38;2;0;140;149m1[0m  [38;2;0;140;149mImplement session picker  [0m
      [38;2;138;138;138mStarted 2026-08-04 08:15 UTC · Last active 2026-08-04 09:45 UTC · Via CLI[0m
   [38;2;138;138;138m2[0m  [38;2;26;26;26mTelegram deployment review[0m

[38;2;138;138;138m↑↓ navigate · ENTER open · CTRL+C exit[0m"
`;

exports[`Session surfaces — show > renders in narrow width > session-show-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show > renders in no Unicode > session-show-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

[1mSurface pointers[0m
-   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show > renders in no color > session-show-no color 1`] = `
"[OK] Session detail

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

Surface pointers
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show > renders in plain > session-show-plain 1`] = `
"[OK] Session detail

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

Surface pointers
-   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show > renders in standard dark > session-show-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show > renders in standard light > session-show-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 5

[1mSurface pointers[0m
•   telegram:chat-1 (since 2024-01-01T00:00:00Z)"
`;

exports[`Session surfaces — show no pointers > renders in narrow width > session-show-no-pointers-narrow width 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — show no pointers > renders in no Unicode > session-show-no-pointers-no Unicode 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

[1mSurface pointers[0m
-   none"
`;

exports[`Session surfaces — show no pointers > renders in no color > session-show-no-pointers-no color 1`] = `
"[OK] Session detail

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

Surface pointers
•   none"
`;

exports[`Session surfaces — show no pointers > renders in plain > session-show-no-pointers-plain 1`] = `
"[OK] Session detail

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

Surface pointers
-   none"
`;

exports[`Session surfaces — show no pointers > renders in standard dark > session-show-no-pointers-standard dark 1`] = `
"[38;2;76;175;80m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — show no pointers > renders in standard light > session-show-no-pointers-standard light 1`] = `
"[38;2;46;125;50m[OK][0m [1mSession detail[0m

Session: sess-1
Title: Test Session
Profile: default
Created: 2024-01-01T00:00:00Z
Updated: 2024-01-02T00:00:00Z
Messages: 0

[1mSurface pointers[0m
•   none"
`;

exports[`Session surfaces — usage error > renders in narrow width > session-usage-error-narrow width 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mUsage error[0m

[38;2;255;167;38m[WARN][0m [1mUsage[0m: Usage: estacoda sessions show <session-id>"
`;

exports[`Session surfaces — usage error > renders in no Unicode > session-usage-error-no Unicode 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mUsage error[0m

[38;2;255;167;38m[WARN][0m [1mUsage[0m: Usage: estacoda sessions show <session-id>"
`;

exports[`Session surfaces — usage error > renders in no color > session-usage-error-no color 1`] = `
"[FAIL] Usage error

[WARN] Usage: Usage: estacoda sessions show <session-id>"
`;

exports[`Session surfaces — usage error > renders in plain > session-usage-error-plain 1`] = `
"[FAIL] Usage error

[WARN] Usage: Usage: estacoda sessions show <session-id>"
`;

exports[`Session surfaces — usage error > renders in standard dark > session-usage-error-standard dark 1`] = `
"[38;2;239;83;80m[FAIL][0m [1mUsage error[0m

[38;2;255;167;38m[WARN][0m [1mUsage[0m: Usage: estacoda sessions show <session-id>"
`;

exports[`Session surfaces — usage error > renders in standard light > session-usage-error-standard light 1`] = `
"[38;2;198;40;40m[FAIL][0m [1mUsage error[0m

[38;2;239;108;0m[WARN][0m [1mUsage[0m: Usage: estacoda sessions show <session-id>"
`;
